file upload added

--- a/src/app/features/auth/signup/signup.component.css
+++ b/src/app/features/auth/signup/signup.component.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,7 +9,7 @@
   padding: 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 400px;
+  width: 430px;
   max-width: 100%;
 }
 
@@ -96,4 +96,4 @@ h2 {
   .registration-box {
     padding: 20px;
   }
-}
+} */
