--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,26 +1,60 @@
 <main class="main-login">
-        <div class="left-login">
-            <h1>Login<br>And join our team</h1>
-            <img src="https://i.postimg.cc/YC13sX2Z/Astronaut-cuate.png" class="left-login-img" alt="astronaut image">
+  <div class="left-login">
+    <h1>Login<br />And join our team</h1>
+    <img
+      src="https://i.postimg.cc/YC13sX2Z/Astronaut-cuate.png"
+      class="left-login-img"
+      alt="astronaut image"
+    />
+  </div>
+  <form #userForm="ngForm">
+    <div class="right-login">
+      <div class="card-login">
+        <h1>Login</h1>
+
+        <div class="textfield">
+          <label for="user">Email</label>
+          <input
+            type="email"
+            name="email"
+            placeholder="User"
+            #email="ngModel"
+            required
+            email
+            minlength="5"
+            [(ngModel)]="loginObj.email"
+          />
+          @if (email.invalid && (email.dirty || email.touched)) {
+          @if(email.errors?.['required']) {
+          <span class="text-light">Email required</span>
+          } @else if(email.errors?.['email']) {
+          <span class="text-light">invalid email</span>
+          } @else if(email.errors?.['minlength']) {
+          <span class="text-light">min length 10</span>
+          } }
         </div>
 
-        <div class="right-login">
-            <div class="card-login">
-                <h1>Login</h1>
-                <div class="textfield">
-                    <label for="user">User</label>
-                    <input type="text" name="user" placeholder="User"
-                    [(ngModel)]="loginObj.email"
-                    >
-                </div>
-
-                <div class="textfield">
-                    <label for="password">Password</label>
-                    <input type="password" name="password" placeholder="Password"
-                    [(ngModel)]="loginObj.password">
-                </div>
-
-                <button class="btn-login" (click)="onLogin()">Login</button>
-            </div>
+        <div class="textfield">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name="password"
+            #pwd="ngModel"
+            required
+            placeholder="Password"
+            [(ngModel)]="loginObj.password"
+          />
+          @if (pwd.invalid && (pwd.dirty || pwd.touched)) {
+          @if(pwd.errors?.['required']) {
+          <span class="text-light">Password required</span>
+          }}
         </div>
-    </main>
+        @if (userForm.invalid) {
+        <button class="btn-login" disabled>Login</button>
+        }@else{
+        <button class="btn-login" (click)="onLogin()">Login</button>
+        }
+      </div>
+    </div>
+  </form>
+</main>
