--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -61,7 +61,13 @@
           </button>
         </li>
         <li class="nav-item">
-          <button type="button" class="btn btn-outline-light">Sign Up</button>
+          <button
+            type="button"
+            class="btn btn-outline-light"
+            routerLink="signup"
+          >
+            Sign Up
+          </button>
         </li>
       </ul>
     </div>
